--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-Dev Protfli0</title>
+    <title>Developer Protfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="webprotstyle.css">
+    <script src="https://kit.fontawesome.com/70c29ea275.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -26,8 +27,8 @@
                     <p class="description">
                         Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                     </p>
-                    <button class="btn-primary">Download CV</button>
-                    <button class="btn-primary">Contact</button>
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
