--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a class="dark-2" href="">Protfolio</a></li>
                 <li><a class="dark-2" href="">Blogs</a></li>
-                <li><a class="dark-2" href=""><button class="btn-primary">Hire me</button></a></li>
+                <li><a class="dark-2" href=""><button class="btn-primary"><i class="fa-solid fa-address-book"></i> Hire me</button></a></li>
             </ul>
         </nav>
         <div class="banner">
